# auth_and_reg_test_task

./: .dockerignore  .env.example  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.github/workflows/: lint.yml
alembic/: env.py
alembic/versions/: 20260405_0001_initial_users_audit.py
app/: main.py
app/api/: deps.py
app/api/v1/: auth.py  users.py
app/core/: config.py  logging.py  security.py
app/db/: asyncpg_connect.py  base.py  session.py
app/models/: __init__.py  audit_log.py  user.py
app/schemas/: auth.py  user.py
app/use_cases/: audit.py  auth.py  user.py
tests/: conftest.py  test_auth.py
